--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,103 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>♦ ♥ ♠ ♣</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
+    <style>
+
+        body {
+            background-color: rgb(17, 120, 60);
+        }
+
+        .card {
+            /* margin-right: auto;
+            margin-left: auto; */
+            margin: 30px auto 0px;
+            padding: 0px 30px 0px;
+            
+            width: 25rem;
+            height: 37rem;
+
+            background-color: white;
+            border: 1px black solid;
+
+            border-radius: 15px;
+
+            display:flex;
+            justify-content: space-between;
+            flex-direction: column;
+        }
+
+        .suit {
+            font-size: 9em;
+        }
+
+        .number {
+            text-align: center;
+            font-size: 7em;
+        }
+
+        .bottom {
+            text-align: right;
+        }
+
+        /* Botón generador carta */
+        #buttonBox {
+            margin-top: 30px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+        }
+
+        button {
+            font-size: 2rem;
+            color: white;
+            width: 15rem;
+            height: 4rem;
+            border-radius: 10px;
+            margin: 10px;
+            font-weight: bold;
+            background-color: rgb(4, 58, 158);
+            padding: 5px;
+            border: none;
+            border-bottom: rgb(54, 54, 54) solid 2px;
+            border-left: rgb(51, 51, 51) solid 2px;
+        }
+
+        button:hover {
+            background-color: rgb(17, 69, 167);
+            cursor: pointer;
+        }
+
+        button:active {
+            background-color: (179, 179, 179);
+            border-top: rgb(54, 54, 54)1px solid;
+            border-right: rgb(54, 54, 54) 1px solid;
+            border-bottom: none;
+            border-left: none;
+        }
+        
+    </style>
+
   </head>
+
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+
+    <div id="buttonBox">
+        <button id="cardGeneratorButton">Generate card</button>
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
+    <div class="card">
+        <div class="top suit"></div>
+        <div class="number"></div>
+        <div class="bottom suit"></div>
+    </div>
+
     <script type="module" src="/app.js"></script>
+
   </body>
+
 </html>
